--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <h2>About</h2>
   <img src="/w3images/boy.jpg" class="w3-image w3-padding-32" width="300" height="300">
   <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
-    <p>JStarbucks Corporation is an American multinational chain of coffeehouses and roastery reserves headquartered in Seattle, Washington.</p>
+    <p>Starbucks Corporation is an American multinational chain of coffeehouses and roastery reserves headquartered in Seattle, Washington.</p>
     <p class="w3-large w3-text-pink">Do not hesitate to contact me!</p>
     <div class="w3-section">
       <label><b>Name</b></label>
