--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
+  <title>W3.CSS Template</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -14,9 +14,13 @@
 
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
-    <a href="#" class="w3-left w3-button w3-white">Starbuck</a>
-    <a href="#about" class="w3-right w3-button w3-white">About</a>
+    <nav>
+      <!-- Set the "Starbuck" button text color to green -->
+      <a href="#" class="w3-left w3-button w3-green">Starbuck</a>
+      <a href="#about" class="w3-right w3-button w3-white">About</a>
+    </nav>
   </header>
+
 <!-- End Page Content -->
 </div>
 
@@ -28,22 +32,21 @@
     <p>Starbucks Corporation is an American multinational chain of coffeehouses and roastery reserves headquartered in Seattle, Washington.</p>
     <p class="w3-large w3-text-pink">Do not hesitate to contact me!</p>
     <div class="w3-section">
-      <label><b>Name</b></label>
-      <input class="w3-input w3-border" type="text" required name="Name">
+      <label for="name"><b>Name</b></label>
+      <input id="name" class="w3-input w3-border" type="text" required name="Name">
     </div>
     <div class="w3-section">
-      <label><b>Email</b></label>
-      <input class="w3-input w3-border" type="text" required name="Email">
+      <label for="email"><b>Email</b></label>
+      <input id="email" class="w3-input w3-border" type="email" required name="Email">
     </div>
     <div class="w3-section">
-      <label><b>Message</b></label>
-      <input class="w3-input w3-border" required name="Message">
+      <label for="message"><b>Message</b></label>
+      <input id="message" class="w3-input w3-border" required name="Message">
     </div>
     <button type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
   </form>
-  <br>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
- 
+
 </body>
 </html>
