--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <span class="w3-tag">Open from 6am to 5pm</span>
   </div>
   <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:90px">the<br>Cafe</span>
+    <span class="w3-text-white" style="font-size:90px">Crumble & Coffee</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">15 Adr street, 5015</span>
+    <span class="w3-text-white">123 Oakwood Lane Willowbrook, 45678</span>
   </div>
 </header>
 
@@ -47,15 +47,15 @@
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT THE CAFE</span></h5>
-    <p>The Cafe was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <p>In addition to our full espresso and brew bar menu, we serve fresh made-to-order breakfast and lunch sandwiches, as well as a selection of sides and salads and other good stuff.</p>
+    <p>Mara always dreamed of opening a cozy café where people could enjoy great coffee and homemade treats. One day, she stumbled upon an old, abandoned bakery in the heart of Willowbrook. It was the perfect spot for her dream. After fixing it up, she decided her café needed a signature treat, something that would stand out.</p>
+    <p>Inspired by her grandmother's famous coffee cake, Mara perfected a crumble-topped version that was light, buttery, and the perfect pairing with coffee. She named her café Crumble & Coffee to capture the simple, comforting essence of her creations.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
-      <p><i>"Use products from nature for what it's worth - but never too early, nor too late." Fresh is the new sweet.</i></p>
-      <p>Chef, Coffeeist and Owner: Liam Brown</p>
+      <p><i>"Where every crumble tells a story and every cup brings a smile."</i></p>
+      <p>Owner: Mara and Ellie</p>
     </div>
     <img src="images/coffee_shop.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
-    <p><strong>Address:</strong> 15 Adr street, 5015, NY</p>
+    <p><strong>Address:</strong>123 Oakwood Lane Willowbrook, 45678</p>
   </div>
 </div>
 
