--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <div class="w3-top">
   <div class="w3-row w3-padding w3-brown">
     <div class="w3-col s3">
-      <a href="#" class="w3-button w3-block w3-pink">HOME</a>
+      <a href="#" class="w3-button w3-block w3-yellow">HOME</a>
     </div>
     <div class="w3-col s3">
       <a href="#about" class="w3-button w3-block w3-brown">ABOUT</a>
     </div>
     <div class="w3-col s3">
-      <a href="#menu" class="w3-button w3-block w3-pink">MENU</a>
+      <a href="#menu" class="w3-button w3-block w3-yellow">MENU</a>
     </div>
     <div class="w3-col s3">
       <a href="#where" class="w3-button w3-block w3-brown">CONTACT</a>
