--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p>Owner: Mara and Ellie</p>
     </div>
     <img src="images/coffee_shop.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
-    <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
+    <p><strong>Opening hours:</strong> Mon-Sun 6am-5pm.</p>
     <p><strong>Address:</strong>123 Oakwood Lane Willowbrook, 45678</p>
   </div>
 </div>
