--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
 <!-- Links (sit on top) -->
 <div class="w3-top">
-  <div class="w3-row w3-padding w3-DarkOliveGreen">
+  <div class="w3-row w3-padding w3-Pink">
     <div class="w3-col s3">
-      <a href="#" class="w3-button w3-block w3-DarkKhaki">HOME</a>
+      <a href="#" class="w3-button w3-block w3-White">HOME</a>
     </div>
     <div class="w3-col s3">
-      <a href="#about" class="w3-button w3-block w3-DarkOliveGreen">ABOUT</a>
+      <a href="#about" class="w3-button w3-block w3-Pink">ABOUT</a>
     </div>
     <div class="w3-col s3">
-      <a href="#menu" class="w3-button w3-block w3-DarkKhaki">MENU</a>
+      <a href="#menu" class="w3-button w3-block w3-white">MENU</a>
     </div>
     <div class="w3-col s3">
-      <a href="#where" class="w3-button w3-block w3-DarkOliveGreen">CONTACT</a>
+      <a href="#where" class="w3-button w3-block w3-Pink">CONTACT</a>
     </div>
   </div>
 </div>
