--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p>Owner: Mara and Ellie</p>
     </div>
     <img src="images/coffee_shop.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
-    <h1><strong>Opening hours</strong>.</h1> 
+   <div class="center"> <h1><strong>Opening hours</strong>.</h1> 
     <p> Monday  5AM-6PM</p>
     <p> Tuesday   5AM-6PM</p>
     <p> Wednesday 5AM-6PM</p>
@@ -62,6 +62,7 @@
     <p> Friday    5AM-6PM</p>
     <p> Saturday  5AM-6PM</p>
     <p> Sunday    5AM-6PM</p>
+   </div>
     <p><strong>Address:</strong>123 Oakwood Lane Willowbrook, 45678</p>
   </div>
 </div>
