--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
 <!-- Links (sit on top) -->
 <div class="w3-top">
-  <div class="w3-row w3-padding w3-Pink">
+  <div class="w3-row w3-padding" style="background-color: #4B2C20;">
     <div class="w3-col s3">
-      <a href="#" class="w3-button w3-block w3-White">HOME</a>
+      <a href="#" class="w3-button w3-block" style="background-color: #D0A98B;">HOME</a>
     </div>
     <div class="w3-col s3">
-      <a href="#about" class="w3-button w3-block w3-Pink">ABOUT</a>
+      <a href="#about" class="w3-button w3-block" style="background-color: #4B2C20;">ABOUT</a>
     </div>
     <div class="w3-col s3">
-      <a href="#menu" class="w3-button w3-block w3-white">MENU</a>
+      <a href="#menu" class="w3-button w3-block" style="background-color: #D0A98B;">MENU</a>
     </div>
     <div class="w3-col s3">
-      <a href="#where" class="w3-button w3-block w3-Pink">CONTACT</a>
+      <a href="#where" class="w3-button w3-block" style="background-color: #4B2C20;">CONTACT</a>
     </div>
   </div>
 </div>
