--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <p>Owner: Mara and Ellie</p>
     </div>
     <img src="images/coffee_shop.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
-   <div class="center"> <h1><strong>Opening hours</strong>.</h1> 
+   <div class="center"> <h1><strong>Opening hours</strong></h1> 
     <p> Monday  5AM-6PM</p>
     <p> Tuesday   5AM-6PM</p>
     <p> Wednesday 5AM-6PM</p>
