--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <div class="w3-top">
   <div class="w3-row w3-padding" style="background-color: #F3E1D3;">
     <div class="w3-col s3">
-      <a href="#" class="w3-button w3-block" style="background-color: #C9A68D;">HOME</a>
+      <a href="#" class="w3-button w3-block" style="background-color: #F3E1D3;">HOME</a>
     </div>
     <div class="w3-col s3">
       <a href="#about" class="w3-button w3-block" style="background-color: #F3E1D3;">ABOUT</a>
     </div>
     <div class="w3-col s3">
-      <a href="#menu" class="w3-button w3-block" style="background-color: #C9A68D;">MENU</a>
+      <a href="#menu" class="w3-button w3-block" style="background-color: #F3E1D3;">MENU</a>
     </div>
     <div class="w3-col s3">
       <a href="#where" class="w3-button w3-block" style="background-color: #F3E1D3;">CONTACT</a>
