--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <!-- About Container -->
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-64"; span class="w3-tag w3-wide">ABOUT THE CAFE</span></h5>
+    <h5 class="w3-center w3-padding-64"> <span class="w3-tag w3-wide">ABOUT THE CAFE</span></h5>
     <p>Mara always dreamed of opening a cozy café where people could enjoy great coffee and homemade treats. One day, she stumbled upon an old, abandoned bakery in the heart of Willowbrook. It was the perfect spot for her dream. After fixing it up, she decided her café needed a signature treat, something that would stand out.</p>
     <p>Inspired by her grandmother's famous coffee cake, Mara perfected a crumble-topped version that was light, buttery, and the perfect pairing with coffee. She named her café Crumble & Coffee to capture the simple, comforting essence of her creations.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
