--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
+  <p>testing 123</p>
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
     <span class="w3-tag">Open from 5am to 6pm</span>
   </div>
