--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <span class="w3-tag">Open from 5am to 6pm</span>
   </div>
   <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:90px">Crumble & Coffee</span>
+    <span class="w3-text-black" style="font-size:90px">Crumble & Coffee</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
     <span class="w3-text-white">123 Oakwood Lane Willowbrook, 45678</span>
