--- a/index.html
+++ b/index.html
@@ -2,10 +2,40 @@
 <html>
 <head>
 <style>
-.center {
-  text-align: center;
-  border: 3px solid green;
-}
+  body {
+    background-color: #FAF3E0; 
+  }
+
+  .w3-top {
+    background-color: #F3E1D3; 
+  }
+
+  .bgimg {
+    position: relative;
+    background-image: url('coffee_shop_image.jpg');
+    background-size: cover;
+    height: 100vh;
+  }
+
+  .bgimg::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5); 
+    z-index: -1;
+  }
+
+  .w3-button {
+    background-color: #F3C261;
+    border: none;
+  }
+
+  .w3-button:hover {
+    background-color: #E1A46D;
+  }
 </style>
 <title>Crumble & Coffee</title>
 <meta charset="UTF-8">
