--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="w3-col s6 tablink"> <a href="#Eat">Eat</a> </div>
       </a>
       <a href="javascript:void(0)" onclick="openMenu(event, 'Drinks');">
-        <div class="w3-col s6 tablink">Drink</div>
+        <div class="w3-col s6 tablink"> <a href="#Drinks">Drink</a</div>
       </a>
     </div>
 
