--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
   <p> Thursday  5AM-6PM</p>
   <p> Friday    5AM-6PM</p>
   <p> Saturday  5AM-6PM</p>
-  <p> Sunday    5AM-6PM</p>
-</div>
+  <p> Sunday    5AM-6PM</p> </div>
     <p><strong>Address:</strong>123 Oakwood Lane Willowbrook, 45678</p>
   </div>
 </div>
