--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   
     <div class="w3-row w3-center w3-card w3-padding">
       <a href="javascript:void(0)" onclick="openMenu(event, 'Eat');" id="myLink">
-        <div class="w3-col s6 tablink"> <a href="#Eat">Eat</a> </div>
+        <div class="w3-col s6 tablink"> <a href="#Eat">Food</a> </div>
       </a>
       <a href="javascript:void(0)" onclick="openMenu(event, 'Drinks');">
         <div class="w3-col s6 tablink"> <a href="#Drinks">Drink</a</div>
@@ -155,7 +155,6 @@
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WHERE TO FIND US</span></h5>
     <p>Find us at 123 Oakwood Lane, Willowbrook, 45678.</p>
-    <img src="/w3images/map.jpg" class="w3-image" style="width:100%">
     <p><span class="w3-tag">FYI!</span> We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggest of criterias, both look and tastes.</p>
     <p><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
     <form action="/action_page.php" target="_blank">
