--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
   <p> Thursday  5AM-6PM</p>
   <p> Friday    5AM-6PM</p>
   <p> Saturday  5AM-6PM</p>
-  <p> Sunday    5AM-6PM</p> </div>
-    <p><strong>Address:</strong>123 Oakwood Lane Willowbrook, 45678</p>
+  <p> Sunday    5AM-6PM</p> 
+   </div>
+   </div>
   </div>
 </div>
 
