--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <style>
+div {
+  width: 300px;
+  margin: auto;
+  background-color: #FFF4A3;
+}
   body {
     background-color: #FAF3E0; 
   }
